--- a/Android/trunk/Shaker/res/layout/main.xml
+++ b/Android/trunk/Shaker/res/layout/main.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-	<TextView  
-		android:paddingTop="20dip"
-	    android:layout_width="fill_parent" 
-	    android:layout_height="wrap_content"
-	    android:textSize="16sp" 
-	    android:textStyle="bold"
+	
+	<TextView
+	    android:layout_width="fill_parent"
+	    android:layout_height="99dp"
 	    android:gravity="center"
-		android:text="Shaker Demo"/>
+	    android:paddingTop="20dip"
+	    android:text="Shaker Demo"
+	    android:textSize="16sp"
+	    android:textStyle="bold" />
+
  	<TableLayout
 		android:paddingTop="10dip"
 		android:layout_width="fill_parent"
@@ -61,4 +63,4 @@
    		android:id="@+id/image"
    		android:layout_gravity="center"
    		android:visibility="invisible"/>
-</LinearLayout>
+</merge>
